--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,19 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+/* Css Applied */
+
+.options {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 15px;
+  width: 220px;
+  padding: 5px;
 }
