--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,28 @@ body {
 #nextbtn:focus {
   border: 2px solid black;
 }
+
+#subbtn {
+  background-color: #d6c8ac;
+  color: #595345;
+  padding: 7px;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  width: 100%;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  font-size: large;
+  border: none;
+}
+
+#subbtn:hover {
+  box-shadow: 5px 5px 1px #fefcf0;
+}
+
+#nextbtn:focus {
+  border: 2px solid black;
+}
+
+.ResultDiv{
+  display: none;
+}
