--- a/src/App.css
+++ b/src/App.css
@@ -46,10 +46,10 @@ body {
 
 #loader {
   position: absolute;
-  left: 47%;
-  top: 35%;
-  width: 100px;
-  height: 100px;
+  left: 45%;
+  top: 40%;
+  width: 80px;
+  height: 80px;
 }
 
 .main {
@@ -74,6 +74,8 @@ body {
   color: #595345;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 22px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .options {
@@ -159,16 +161,20 @@ body {
 
 #Resulthead {
   font-size: 40px;
+  margin-top: 10px;
 }
 
 #resultImg {
   width: 250px;
   height: 200px;
+  margin-top: -25px;
+  mix-blend-mode: darken;
 }
 
 .ResultText {
   font-size: x-large;
   font-weight: 700;
+  margin-top: 0;
 }
 
 hr {
@@ -179,8 +185,7 @@ span {
   padding-left: 20px;
 }
 
-
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1000px) {
   .main {
     width: 60%;
   }
@@ -193,6 +198,8 @@ span {
     position: absolute;
     left: 42%;
     top: 35%;
+    width: 50px;
+    height: 50px;
   }
 }
 
