--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body {
   background-color: #faedcd;
   width: 38%;
   margin: auto;
-  margin-top: 5vh;
+  margin-top: 3vh;
   margin-bottom: 5vh;
   padding: 20px;
   border-radius: 10px;
@@ -96,7 +96,7 @@ body {
 }
 
 .options:focus {
-  border: 2px solid black;
+  border: 2px solid #595345;
 }
 
 .options:hover {
@@ -195,6 +195,7 @@ span {
 
 .timer {
   padding-right: 5px;
+  margin-top: 5px;
   color: #595345;
   font-family: 'Times New Roman', Times, serif;
   font-weight: bold;
